<resources>
    <string name="app_name">printah</string>
    <!-- Strings related to login -->
    <string name="osu_username">OSU username</string>
    <string name="prompt_password">OSU Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">Please enter a valid OSU username (lastName.#)</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="button_files">Select file</string>
    <string name="button_url">Specify URL</string>
    <string name="button_history">Print History</string>
    <string name="title_activity_view_pdf">ViewPDF</string>
    <string name="prompt_url">Enter URL</string>
    <string name="button_download">Download</string>
    <string name="button_check_status">Status</string>
    <string name="button_cancel_download">Cancel</string>
    <string name="print_options_title">Print options</string>
    <string name="choose_sides">Choose sides</string>
    <string name="choose_orientation">Choose orientation</string>
    <string name="number_of_copies">Number of copies</string>
    <string name="print">Print</string>
    <string name="printing_title">Printing</string>
    <string name="file_copy_progress_message">Teleporting file</string>
    <string name="print_progress_message">Small-talking with printer</string>
    <string name="print_failed_message">Printer kicked us out :(</string>
    <string name="print_success_message">Your copies are hot and ready!</string>
    <string name="try_different_printer">Try Different printer</string>
    <string name="try_again">Try again</string>
    <string name="title_activity_display_printer">DisplayPrinterActivity</string>
</resources>
