<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="printah.osu.printah.PrintOptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp"
        tools:context="printah.osu.printah.PrintOptionsActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensed_light"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:text="@string/print_options_title"
            android:textSize="40sp"
            tools:text="Print options" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_sides"/>

        <Spinner
            android:id="@+id/sidesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_orientation" />

        <Spinner
            android:id="@+id/orientationSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/numberOfCopies"
            android:text="@string/number_of_copies" />

        <EditText
            android:id="@+id/numberOfCopies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Button
            android:id="@+id/printConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/print" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/printing_overlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_above="@id/progressBar"
            android:layout_marginBottom="5sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:fontFamily="@font/robotocondensed_light"
            android:text="@string/printing_title" />

        <ProgressBar
            android:indeterminate="false"
            android:max="100"
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_below="@id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressText"
            android:fontFamily="@font/opensans_regular"
            tools:text="Small-talking with printer"/>
        <LinearLayout
            android:id="@+id/failure_panel"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressText"
            android:layout_marginTop="15sp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/printAgainButton"
                android:background="@android:color/holo_red_light"
                android:padding="10sp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@android:color/white"
                android:text="@string/try_again"
                android:layout_width="fill_parent"
                android:layout_marginBottom="5sp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/switchPrinterButton"
                android:padding="10sp"
                android:background="@android:color/darker_gray"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@android:color/black"
                android:text="@string/try_different_printer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>