<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="printah.osu.printah.UrlSelectionActivity">

    <EditText
        android:id="@+id/editText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="292dp"
        android:layout_height="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="@string/prompt_url"
        android:inputType="textUri"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="260dp"
        android:layout_height="90dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:onClick="downloadURL"
        android:text="@string/button_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/statusButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:onClick="checkStatus"
        android:text="@string/button_check_status"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadButton"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="30dp"
        android:onClick="cancelDownload"
        android:text="@string/button_cancel_download"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadButton" />
</android.support.constraint.ConstraintLayout>
