<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="printah.osu.printah.Main2Activity"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="360dp"
        android:layout_height="135dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:drawableStart="@drawable/print_icon_1"
        android:paddingLeft="30dp"
        android:text="@string/button_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="360dp"
        android:layout_height="135dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:drawableStart="@drawable/upload_icon_1"
        android:paddingLeft="30dp"
        android:text="@string/button_files"
        android:onClick="openFolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="360dp"
        android:layout_height="135dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:drawableStart="@drawable/url_icon_1"
        android:paddingLeft="30dp"
        android:text="@string/button_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />





</LinearLayout>
